rabbitmq/04-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-nodeport
  labels:
    app.kubernetes.io/name: rabbitmq
spec:
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - protocol: TCP
      port: 5672        # Porta interna para AMQP (RabbitMQ)
      targetPort: 5672   # Porta do container RabbitMQ
      nodePort: 3672  # Porta exposta no nó do Kubernetes
      name: amqp
  type: NodePort
